testsuite/tests/parse-errors/pr7847.compilers.reference
File "pr7847.ml", line 10, characters 30-32:
Error: Syntax error
